# src/NovaLab.Api.Twitch/Followers/FollowerGoal/TwitchFollowerGoalController.cs
@@ -1,13 +1,13 @@
 ﻿// ---------------------------------------------------------------------------------------------------------------------
 // Imports
 // ---------------------------------------------------------------------------------------------------------------------
-namespace NovaLab.Api.Twitch.Followers;
+namespace NovaLab.Api.Twitch.Followers.FollowerGoal;
 
-using Data;
-using Data.Data.Twitch.Followers;
 using Extensions;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.EntityFrameworkCore;
+using NovaLab.Data;
+using NovaLab.Data.Data.Twitch.Followers;
 using Serilog;
 using Swashbuckle.AspNetCore.Annotations;
 using System.Net;
@@ -25,11 +25,11 @@ public class TwitchFollowerGoalController(
     // GET Methods
     // -----------------------------------------------------------------------------------------------------------------
     [HttpGet]
-    [ProducesResponseType<ApiResult<TwitchFollowerGoalDto>>((int)HttpStatusCode.OK)]
+    [ProducesResponseType<ApiResult<FollowerGoalDto>>((int)HttpStatusCode.OK)]
     [ProducesResponseType<ApiResult>((int)HttpStatusCode.InternalServerError)]
     [SwaggerOperation(OperationId = "GetFollowerGoals")]
     public async Task<IActionResult> GetFollowerGoals(
-        [FromQuery(Name = "user-id")] string userId, 
+        [FromQuery(Name = "user-id")] string? userId = null, 
         [FromQuery(Name = "goal-ids")] Guid[]? goalIds = null, 
         [FromQuery(Name = "limit")] int? limit = null
     ) {
@@ -38,15 +38,15 @@ public class TwitchFollowerGoalController(
         try {
             IQueryable<TwitchFollowerGoal> query = dbContext.TwitchFollowerGoals
                 .Include(fg => fg.User)
-                .Where(fg => fg.User.Id == userId)
-                
+                .ConditionalWhere(userId is not null,fg => fg.User.Id == userId)
                 .ConditionalWhere(goalIds is not null, fg => goalIds!.Contains(fg.Id))
                 .ConditionalTake(goalIds is null && limit is not null, limit ?? 0) // Cannot take more than one id already
             ;
             
             TwitchFollowerGoal[] result = await query.ToArrayAsync();
             return Success(result
-                .Select(TwitchFollowerGoalDto.FromDbObject)
+                .Select(FollowerGoalDto.FromDbObject)
+                .ToArray()
             );
         }
         catch (Exception ex) {
@@ -60,7 +60,7 @@ public class TwitchFollowerGoalController(
     // POST Methods
     // -----------------------------------------------------------------------------------------------------------------
     [HttpPost]
-    [ProducesResponseType<ApiResult<TwitchFollowerGoalDto>>((int)HttpStatusCode.OK)]
+    [ProducesResponseType<ApiResult<FollowerGoalDto>>((int)HttpStatusCode.OK)]
     [ProducesResponseType<ApiResult>((int)HttpStatusCode.BadRequest)]
     [SwaggerOperation(OperationId = "PostFollowerGoal")]
     public async Task<IActionResult> PostFollowerGoal(
@@ -84,7 +84,7 @@ public class TwitchFollowerGoalController(
             await dbContext.TwitchFollowerGoals.AddAsync(followerGoal);
             await dbContext.SaveChangesAsync();
 
-            return Success(TwitchFollowerGoalDto.FromDbObject(followerGoal));
+            return Success(FollowerGoalDto.FromDbObject(followerGoal));
 
         }
         catch (Exception ex) {
